[metadata]
name = cloudbase-neutron-plugin-hyperv
version = 2015.1
summary = OpenStack Hyper-V Networking L2 Agent
description-file =
    README.md
author = Cloudbase Solutions Srl
author-email = hello@cloudbase.it
home-page = http://www.cloudbase.it/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    cloudbase

[global]
setup-hooks =
    pbr.hooks.setup_hook
    neutron.hooks.setup_hook

[entry_points]

[wheel]
universal = 1
